# flakehell

./: .drone.star  .editorconfig  .gitignore  .pre-commit-hooks.yaml  .travis.yml  LICENSE  README.md  example.py  pyproject.toml
docs/: conf.py  config.md  formatters.md  ide.md  index.md  lint.md  missed.md  parsers.md  plugins.md  troubleshooting.md
docs/commands/: baseline.md  code.md  codes.md  dropqa.md  lint.md  missed.md  plugins.md  yesqa.md
flakehell/: __init__.py  __main__.py  _app.py  _checkers.py  _cli.py  _constants.py  _discover.py  _extractors.py  _plugin.py  _style.py  _types.py
flakehell/_logging/: __init__.py  _config.py
flakehell/_logic/: __init__.py  _baseline.py  _colors.py  _config.py  _discover.py  _extractors.py  _plugin.py  _snapshot.py  _yesqa.py
flakehell/_patched/: __init__.py  _app.py  _checkers.py  _plugins.py  _processor.py  _style_guide.py  _violation.py
flakehell/commands/: __init__.py  _baseline.py  _code.py  _codes.py  _dropqa.py  _excluded.py  _installed.py  _lint.py  _missed.py  _plugins.py  _show.py  _used.py  _version.py  _yesqa.py
flakehell/formatters/: __init__.py  _baseline.py  _colored.py  _gitlab.py  _grouped.py  _json.py  _stat.py
flakehell/parsers/: __init__.py  _base.py  _jupyter.py  _markdown.py  _python.py  _rst.py  _yaml.py
flakehell/plugins/: __init__.py  _pylint.py
tests/: test_cli.py  test_flake8helled_stdin.py  test_logic_extractors.py  test_logic_yesqa.py
tests/test_logic/: test_extractors.py  test_plugin.py  test_yesqa.py
tests/test_parsers/: test_jupyter.py  test_main.py  test_markdown.py  test_rst.py  test_yaml.py
tests/test_patched/: test_checkers.py
